--- a/package.json
+++ b/package.json
@@ -1,62 +1,34 @@
 {
-  "name": "mapado-image-js-crop",
+  "name": "@mapado/image-js-crop",
   "version": "1.1.0",
   "description": "Cropping mapado image in JS",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register  --recursive",
-    "test:watch": "npm run test -- --watch",
-    "build": "./node_modules/.bin/babel src --out-dir dist && git add dist/ && git commit dist/ -m 'build module'"
+    "test": "jest",
+    "build": "tsc"
   },
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/mapado/image-js-crop.git"
+    "url": "git@github.com:mapado/image-js-crop.git"
   },
   "author": "Julien Deniau",
-  "homepage": "https://bitbucket.org/mapado/image-js-crop#readme",
-  "eslintConfig": {
-    "extends": "airbnb",
-    "rules": {
-      "new-cap": [
-        2,
-        {
-          "newIsCap": true,
-          "capIsNew": false
-        }
-      ],
-      "no-underscore-dangle": [
-        "error",
-        {
-          "allowAfterThis": true,
-          "allow": [
-            "_groups"
-          ]
-        }
-      ],
-      "react/prefer-es6-class": 1
-    }
-  },
-  "babel": {
-    "presets": [
-      "react-native"
-    ]
-  },
+  "homepage": "https://github.com/mapado/image-js-crop",
   "publishConfig": {
     "registry": "http://npm.mapado.net:4873"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-preset-react-native": "^1.7.0",
-    "chai": "^3.5.0",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.7.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.1.1",
-    "mocha": "^2.4.5"
-  }
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
+  },
+  "dependencies": {}
 }
