--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "@mapado/image-url-builder",
   "version": "2.0.1",
   "description": "Build mapado image in JS",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
     "test": "jest",
     "build": "tsc",
