--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mapado/image-url-builder",
+  "private": false,
   "version": "2.0.2",
   "description": "Build mapado image in JS",
   "type": "module",
@@ -13,15 +14,14 @@
     "build": "tsc",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:types": "tsc --noEmit",
-    "lint:eslint": "eslint --quiet src/",
-    "prepublishOnly": "yarn lint && yarn test && yarn build"
+    "lint:eslint": "eslint --quiet src/"
   },
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:mapado/image-url-builder-js.git"
+    "url": "git+ssh://git@github.com/mapado/image-url-builder-js.git"
   },
   "author": "Julien Deniau",
   "homepage": "https://github.com/mapado/image-url-builder-js",
@@ -38,5 +38,8 @@
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
-  "dependencies": {}
+  "bugs": {
+    "url": "https://github.com/mapado/image-url-builder-js/issues"
+  },
+  "license": "MIT"
 }
