--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "author": "Julien Deniau",
   "homepage": "https://github.com/mapado/image-url-builder-js",
   "publishConfig": {
-    "registry": "http://npm.mapado.net:4873"
+    "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
