--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --maxWorkers=3",
     "build": "tsc",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:types": "tsc --noEmit",
