--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "scripts": {
@@ -44,5 +44,6 @@
   "bugs": {
     "url": "https://github.com/mapado/image-url-builder-js/issues"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@4.9.3"
 }
